# databases-2-programs

./: README.md
PY2-BD2/: README.md  dataset.xlsx  docker-compose.yml  neo4j.py  neo4j_database.py  postgresql.py  spark.py  test.ipynb
PY2-BD2/database/: 00-init.sql
TC01-Docker-RestAPI/: README.md  app.py  data.py  db.py  docker-compose.yml  pyproject.toml  requirements.txt  script.sql  test-api.py
TC01-Docker-RestAPI/database/: 00-init.sql  01-procedures.sql
TC01-Docker-RestAPI/db/: 01-init.sql
TC01-Docker-RestAPI/models/: schemas.py  task.py  user.py
TC03-Replicacion-Mongo/: Pasos.md  datos.ipynb  docker-compose.yml
TC04-BD2-Kafka-y-Neo4j/: README.md  consumer.py  database.py  docker-compose.yml  producer.py  test.ipynb
